documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef long LONG;
typedef long * LPLONG;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

C41W32API USHORT __stdcall C41_MsgBlockRd(LPUSHORT valueptr,INT msgnum,HCARD handleval);

C41W32API USHORT __stdcall C41_MsgBlockWr(LPUSHORT valueptr,INT msgnum,HCARD handleval);

C41W32API USHORT __stdcall C41_MsgCommRd(LPUSHORT valueptr,INT msgnum,HCARD handleval);

C41W32API USHORT __stdcall C41_MsgCommWr(LPUSHORT valueptr,INT msgnum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_MsgConfig(USHORT configval,INT msgnum,HCARD handleval);

C41W32API ULONG __stdcall C41_MsgEncoderRd(INT msgnum,HCARD handleval);

C41W32API VOID __stdcall C41_MsgEncoderWr(ULONG msgval,INT msgnum,HCARD handleval);

C41W32API HCARD __stdcall C41_OpenCard(INT cardnum);

C41W32API VOID __stdcall C41_Reset(HCARD handleval);

C41W32API VOID __stdcall C41_Restart(HCARD handleval);

C41W32API INT __stdcall C41_SchedBranch(INT schindex,INT condition,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedBuild(INT basemsgnum,USHORT nummsgs,LPINT minperiod,LPINT maxperiod,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedCall(INT schindex,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedGap(USHORT gapval,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedHalt(INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedInt(USHORT tagval,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedMsg(INT msgnum,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedPause(INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedPulse(INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedRestart(INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedRet(INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedStart(INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_SelfTest(HCARD handleval);

C41W32API ERRVAL __stdcall C41_SeqClear(HCARD handleval);

C41W32API ERRVAL __stdcall C41_SeqConfig(USHORT configval,INT interval,INT cardnum,HCARD handleval);

C41W32API USHORT __stdcall C41_SeqRd(LPULONG msgval,LPULONG stampval,HCARD handleval);

C41W32API USHORT __stdcall C41_Start(HCARD handleval);

C41W32API USHORT __stdcall C41_Stop(HCARD handleval);

C41W32API VOID __stdcall C41_TimerClear(HCARD handleval);

C41W32API ULONG __stdcall C41_TimerRd(HCARD handleval);

C41W32API USHORT __stdcall C41_TimerResolution(INT timerresol,HCARD handleval);


/**
*
*  CM429-1 717 Driver functions.
*
**/

C41W32API ERRVAL __stdcall C41_717Boot(INT handleval);

C41W32API ERRVAL __stdcall C41_717FrameWipe(INT channum,INT handleval);

C41W32API ERRVAL __stdcall C41_717SubFrmClear(INT channum,INT handleval);

C41W32API ERRVAL __stdcall C41_717SubFrmDataWipe(INT subframe,INT channum,INT handleval);

C41W32API LONG __stdcall C41_717SubFrmPtrDefault(INT channum,INT handleval);

C41W32API LONG __stdcall C41_717SubFrmPtrSet(INT subfrmnum,INT destsubfrm,INT channum,INT handleval);

C41W32API ERRVAL __stdcall C41_717SubFrmRecordWipe(INT subframe,INT channum,INT handleval);

C41W32API ERRVAL __stdcall C41_717SubFrmWordConfig(LONG configval,INT subframe,INT wordnum,INT channum,INT handleval);

C41W32API ERRVAL __stdcall C41_717SubFrmWordConfigEx(LONG configval,INT subframe,INT channum,INT handleval);

C41W32API INT __stdcall C41_717SubFrmWordRd(INT subframe,INT wordnum,INT channum,INT handleval);

C41W32API BOOL __stdcall C41_717SyncTest(INT channum,INT handleval);

C41W32API ERRVAL __stdcall C41_717SyncWordDefault(INT channum,INT handleval);

C41W32API ERRVAL __stdcall C41_717SyncWordSet(INT sync1,INT sync2,INT sync3,INT sync4,INT channum,INT handleval);

C41W32API VOID __stdcall C41_Ch717Disable(INT handleval);

C41W32API VOID __stdcall C41_Ch717Enable(INT handleval);


/**
*
*  Internal functions used by the CM429-1 Driver.
*
**/

C41W32API USHORT __stdcall C41_AcgaRd(USHORT addrval,HCARD handleval);

C41W32API VOID __stdcall C41_AcgaWr(USHORT value,USHORT addrval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_AsciiToMant(LPCSTR str,LPLONG mant,LPINT exp);

C41W32API ERRVAL __stdcall C41_CardClose(HCARD handleval);

C41W32API VOID __stdcall C41_CardInit(VOID);

C41W32API HCARD __stdcall C41_CardOpen(INT cardnum);