documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32NET.CS

        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgBlockRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_MsgBlockRd(ref UInt16 valueptr, Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgBlockWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_MsgBlockWr(ref UInt16 valueptr, Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgCommRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_MsgCommRd(ref UInt16 valueptr, Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgCommWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_MsgCommWr(ref UInt16 valueptr, Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_MsgConfig(UInt16 configval, Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgEncoderRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_MsgEncoderRd(Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgEncoderWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_MsgEncoderWr(UInt32 msgval, Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_OpenCard@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_OpenCard(Int32 cardnum);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_Reset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_Reset(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_Restart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_Restart(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedBranch@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedBranch(Int32 schindex, Int32 condition, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedBuild@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedBuild(Int32 basevalmsgnum, UInt16 nummsgs, ref Int32 minperiod, ref Int32 maxperiod, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedCall@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedCall(Int32 schindex, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedGap@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedGap(UInt16 gapval, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedHalt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedHalt(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedInt@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedInt(UInt16 tagval, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedMsg(Int32 msgnum, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedPause@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedPause(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedPulse@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedPulse(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedRestart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedRestart(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedRet@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedRet(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedStart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedStart(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SelfTest@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SelfTest(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SeqClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SeqClear(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SeqConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SeqConfig(UInt16 configval, Int32 interval, Int32 cardnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SeqRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_SeqRd(ref UInt32 msgval, ref UInt32 stampval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_Start@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_Start(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_Stop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_Stop(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_TimerClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_TimerClear(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_TimerRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_TimerRd(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_TimerResolution@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_TimerResolution(Int32 timerresol, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_717Boot@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_717Boot(Int32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_717FrameWipe@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_717FrameWipe(Int32 channum, Int32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_717SubFrmClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_717SubFrmClear(Int32 channum, Int32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_717SubFrmDataWipe@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_717SubFrmDataWipe(Int32 subframe, Int32 channum, Int32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_717SubFrmPtrDefault@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_717SubFrmPtrDefault(Int32 channum, Int32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_717SubFrmPtrSet@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_717SubFrmPtrSet(Int32 subfrmnum, Int32 destsubfrm, Int32 channum, Int32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_717SubFrmRecordWipe@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_717SubFrmRecordWipe(Int32 subframe, Int32 channum, Int32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_717SubFrmWordConfig@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_717SubFrmWordConfig(Int32 configval, Int32 subframe, Int32 wordnum, Int32 channum, Int32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_717SubFrmWordConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_717SubFrmWordConfigEx(Int32 configval, Int32 subframe, Int32 channum, Int32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_717SubFrmWordRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_717SubFrmWordRd(Int32 subframe, Int32 wordnum, Int32 channum, Int32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_717SyncTest@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_717SyncTest(Int32 channum, Int32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_717SyncWordDefault@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_717SyncWordDefault(Int32 channum, Int32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_717SyncWordSet@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_717SyncWordSet(Int32 sync1, Int32 sync2, Int32 sync3, Int32 sync4, Int32 channum, Int32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_Ch717Disable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_Ch717Disable(Int32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_Ch717Enable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_Ch717Enable(Int32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_AcgaRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_AcgaRd(UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_AcgaWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_AcgaWr(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_AsciiToMant@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_AsciiToMant(ref string str, ref Int32 mant, ref Int32 exp);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CardClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CardClose(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CardInit@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CardInit();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CardOpen@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_CardOpen(Int32 cardnum);
